# okanimoji

./: .gitignore  Cargo.toml  README.md
assets/fonts/: README.md  fonts.toml
assets/fonts/migu/: IPA_Font_License_Agreement.txt
assets/fonts/togoshi/: Togoshi_Licence.txt
src/: fonts.rs  lib.rs  main.rs
