[package]
name = "okanimoji"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "assets/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.1"
image_ascii = "0.1.1"
kanji = "2.0.0"
rascii_art = "0.4.5"
rusttype = "0.9.3"
terminal_size = "0.3.0"
